--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,9 @@
               <a href="./index.html" class="nav-link">Studio</a>
             </li>
             <li class="top-item">
-              <a href="./portfolio.html" class="nav-link">Portfolio</a>
+              <a href="./portfolio.html" class="nav-link portfolio-link-p"
+                >Portfolio</a
+              >
             </li>
             <li class="top-item">
               <a href="" class="nav-link">Contacts</a>
@@ -76,7 +78,19 @@
           <ul class="portfolio-works">
             <li class="portfolio-work-item">
               <a href="" class="portfolio-link">
-                <img src="./images/banking-app.jpg" alt="banking" width="360" />
+                <div class="portfolio-wrap">
+                  <img
+                    src="./images/banking-app.jpg"
+                    alt="banking"
+                    width="360"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-bord">
                   <h2 class="portfolio-work-title">
                     Banking App Interface Concept
@@ -87,7 +101,15 @@
             </li>
             <li class="portfolio-work-item">
               <a href="" class="portfolio-link">
-                <img src="./images/cashless.jpg" alt="cashless" width="360" />
+                <div class="portfolio-wrap">
+                  <img src="./images/cashless.jpg" alt="cashless" width="360" />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-bord">
                   <h2 class="portfolio-work-title">Cashless Payment</h2>
                   <p class="portfolio-work-text">Marketing</p>
@@ -96,7 +118,19 @@
             </li>
             <li class="portfolio-work-item">
               <a href="" class="portfolio-link">
-                <img src="./images/meditaion.jpg" alt="meditaion" width="360" />
+                <div class="portfolio-wrap">
+                  <img
+                    src="./images/meditaion.jpg"
+                    alt="meditaion"
+                    width="360"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-bord">
                   <h2 class="portfolio-work-title">Meditaion App</h2>
                   <p class="portfolio-work-text">App</p>
@@ -105,7 +139,15 @@
             </li>
             <li class="portfolio-work-item">
               <a href="" class="portfolio-link">
-                <img src="./images/taxi.jpg" alt="taxi" width="360" />
+                <div class="portfolio-wrap">
+                  <img src="./images/taxi.jpg" alt="taxi" width="360" />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-bord">
                   <h2 class="portfolio-work-title">Taxi Service</h2>
                   <p class="portfolio-work-text">Marketing</p>
@@ -114,7 +156,15 @@
             </li>
             <li class="portfolio-work-item">
               <a href="" class="portfolio-link">
-                <img src="./images/screen.jpg" alt="screen" width="360" />
+                <div class="portfolio-wrap">
+                  <img src="./images/screen.jpg" alt="screen" width="360" />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-bord">
                   <h2 class="portfolio-work-title">Screen Illustrations</h2>
                   <p class="portfolio-work-text">Design</p>
@@ -123,7 +173,15 @@
             </li>
             <li class="portfolio-work-item">
               <a href="" class="portfolio-link">
-                <img src="./images/online.jpg" alt="online" width="360" />
+                <div class="portfolio-wrap">
+                  <img src="./images/online.jpg" alt="online" width="360" />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-bord">
                   <h2 class="portfolio-work-title">Online Courses</h2>
                   <p class="portfolio-work-text">Marketing</p>
@@ -132,7 +190,19 @@
             </li>
             <li class="portfolio-work-item">
               <a href="" class="portfolio-link">
-                <img src="./images/instagram.jpg" alt="instagram" width="360" />
+                <div class="portfolio-wrap">
+                  <img
+                    src="./images/instagram.jpg"
+                    alt="instagram"
+                    width="360"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-bord">
                   <h2 class="portfolio-work-title">
                     Instagram Stories Concept
@@ -143,7 +213,15 @@
             </li>
             <li class="portfolio-work-item">
               <a href="" class="portfolio-link">
-                <img src="./images/organic.jpg" alt="organic" width="360" />
+                <div class="portfolio-wrap">
+                  <img src="./images/organic.jpg" alt="organic" width="360" />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-bord">
                   <h2 class="portfolio-work-title">Organic Food</h2>
                   <p class="portfolio-work-text">Web Site</p>
@@ -152,7 +230,15 @@
             </li>
             <li class="portfolio-work-item">
               <a href="" class="portfolio-link">
-                <img src="./images/fresh.jpg" alt="fresh" width="360" />
+                <div class="portfolio-wrap">
+                  <img src="./images/fresh.jpg" alt="fresh" width="360" />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-bord">
                   <h2 class="portfolio-work-title">Fresh Coffee</h2>
                   <p class="portfolio-work-text">Web Site</p>
