--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >
           <ul class="site-nav">
             <li class="top-item">
-              <a href="./index.html" class="nav-link">Studio</a>
+              <a href="./index.html" class="nav-link studio">Studio</a>
             </li>
             <li class="top-item">
               <a href="./portfolio.html" class="nav-link">Portfolio</a>
@@ -55,7 +55,9 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <button type="button" class="hero-button" data-modal-open>
+          Order Service
+        </button>
       </section>
 
       <section class="strategy">
@@ -448,5 +450,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close" data-modal-close>
+          <svg class="modal-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
